# remedy-transcription

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: tauri-ci.yml
frontend/: .eslintrc  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: AudioManager.diarizationFlag.test.tsx  AudioManager.test.tsx  AudioManager.tsx  AudioRecorder.tsx  Transcript.diarizationFlag.test.tsx  Transcript.test.tsx  Transcript.tsx
frontend/src/config/: features.ts  transcription.test.ts  transcription.ts
frontend/src/hooks/: useTranscriber.diarizationFlag.test.ts  useTranscriber.test.ts  useTranscriber.ts  useWorker.ts
frontend/src/lib/: captionFormatter.test.ts  captionFormatter.ts  persistedChunkSegments.fixture.json  persistedSegments.fixture.json  speakerAlignment.test.ts  speakerAlignment.ts  srtGenerator.test.ts  srtGenerator.ts  workerTranscript.test.ts  workerTranscript.ts
frontend/src/services/: api.test.ts  api.ts  types.test.ts  types.ts
frontend/src/utils/: Constants.ts  captionFormatter.ts  detectBrowserCaps.ts
frontend/src/workers/: transcription.worker.ts
scripts/: build-diarize-sidecar.sh  build-release.sh  fetch-sidecars.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/diarize-sidecar/: Cargo.toml
src-tauri/diarize-sidecar/src/: cli.rs  engine.rs  main.rs  wav.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  diarize.rs  events.rs  lib.rs  main.rs  paths.rs  sidecar.rs  store.rs
