[package]
name = "remedy-transcription"
version = "1.0.0"
description = "Local-first video/audio transcription desktop app"
authors = ["Remedy"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "remedy_transcription_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
url = "2"
anyhow = "1"
thiserror = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
